--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <h1>3 Phương pháp thêm CSS</h1>
     <a href="./inline.html">Inline css</a>
-    <a href="./inline.html">Inline css</a>
-    <a href="./inline.html">Inline css</a>
+    <a href="./internal.html">Inline css</a>
+    <a href="./external.html">Inline css</a>
     <!-- 
     1) Tạo 3 đường dẫn tới 3 Webpages: inline, internal and external 
     2) Làm theo hướng dẫn trong các file để style cho webpage
